# tf2_python_rust

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflow/: ci,yaml
.github/workflows/: python.yml  rust.yml
examples/: addition.rs  mnist.rs  mnist_savedmodel.rs  regression_checkpoint.rs  regression_savedmodel.md  regression_savedmodel.rs  zenn.rs  zenn_savedmodel.rs
examples/addition/: addition.py
examples/mnist/: expected_values.txt  mnist.py  model.pb
examples/mnist_savedmodel/: expected_values.txt  mnist_savedmodel.py  saved_model.pb
examples/mnist_savedmodel/variables/: variables.data-00000-of-00001  variables.index
examples/regression_checkpoint/: .gitignore  model.pb  regression_checkpoint.py
examples/regression_savedmodel/: regression_savedmodel.py  saved_model.pb
examples/regression_savedmodel/variables/: variables.data-00000-of-00001  variables.index
examples/zenn/: zenn.py
examples/zenn_savedmodel/: keras_metadata.pb  saved_model.pb  zenn_savedmodel.py
examples/zenn_savedmodel/variables/: variables.index
src/: main.rs
