[tool.poetry]
name = "tf2_python_rust"
version = "0.1.0"
description = ""
authors = ["dskkato <kato.daisuke429@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "^2.5.0"

[tool.poetry.dev-dependencies]
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
